--- a/src/Quantum Computing.tex
+++ b/src/Quantum Computing.tex
@@ -101,19 +101,60 @@
 
 The design of quantum algorithms requires a different perspective from that of classical computation. In classical computer science, the majority of widely studied algorithms are \tit{deterministic}, meaning that for a given input they will always produce the \tit{same output}. Some algorithms are \tit{randomized}, making use of probability to achieve efficiency or simplicity, yet even in those cases the computation itself is ultimately classical in nature. In fact, to achieve such \tit{randomness} classical algorithms employ \tbf{pseudo-random number generation}, which must ultimately produce \underline{finite} sequences.
 
-Quantum computation, by contrast, \tit{incorporates probability} at its core. The act of measuring a quantum system does not reveal a single, predetermined result, but rather yields one outcome from a distribution of possible outcomes, with probabilities governed by the system's quantum state. This fundamental probabilistic character distinguishes quantum algorithms from their classical counterparts.
+Quantum computation, by contrast, \tit{incorporates probability} at its core. The act of measuring a quantum system does not reveal a single, predetermined result, but rather yields one outcome from a distribution of possible outcomes, with probabilities governed by the system's quantum state. This fundamental probabilistic characteristic distinguishes quantum algorithms from their classical counterparts.
 
 In fact, in the context of quantum computing we are often interested in \tbf{probabilistic algorithms}: for such algorithms, a given input $i$ can lead to a finite set of possible outputs $o_1, \ldots, o_N$, each occurring with an associated probability $p_1, \ldots, p_N$ --- where $\sum_{i = 1}^n{p_i} = 1$.
 
-As previously mentioned, the quantum equivalent of the classical bits are the \tbf{qubit}, which are nothing but vectors: $$\mathbf 0 := \ket{0} = \rmat{1 \\ 0} \quad \quad \mathbf 1 := \ket 1 = \rmat{0 \\ 1}$$ The notation above is called \curlyquotes{braket} notation and it will be explored in greater detail in later sections.
+As previously mentioned, the quantum equivalent of the classical bits are the \tbf{qubit}, but define the qubits we first need to define some preliminary concepts. The following vectors are called \tbf{basis states} $$\ket{0} := \rmat{1 \\ 0} \quad \quad \ket 1 := \rmat{0 \\ 1}$$ and they represent the classical bits 0 and 1 respectively --- the notation above is called \curlyquotes{braket} notation and it will be explored in greater detail in later sections.
 
-Furtmerore, the state of a qubit is a \tbf{superposition} $$\ket \psi = \alpha \ket 0 + \beta \ket 1 = \alpha \rmat{1 \\ 0 } + \beta \rmat{0 \\ 1}$$ where $\alpha, \beta \in \C$ such that $\abs \alpha ^2 + \abs \beta ^2 = 1$ are called \tbf{probability amplitudes}. This means that \todo{what} In fact, the \curlyquotes{true} state of a qubit \tbf{cannot be observed}, i.e. we cannot find out precisely the value of $\alpha$ and $\beta$.
+So what is a qubit? A qubit is the basic unit of information in quantum computing, which represents a \tbf{superposition} of states simultaneously --- note that we will refer to qubits and their states interchangeably, since the only thing that we care about a qubit is its own state
 
-Since the state of qubit is a superposition, to know the value of a qubit we have to \tit{measure it}, but unfortunately the measurement operations itself will make the qubit \tit{collapse} into either $\ket 0$ or $\ket 1$ with probabilities $\abs \alpha ^2$ and $\abs \beta ^2$ respectively, i.e. $$\Pr[\ket 0] = \abs \alpha ^2 \quad \quad \Pr[\ket 1] = \abs \beta ^2$$ Note that if we measure a collapsed qubit we will keep observing the same state indefinitely.
+In practice, the state of a qubit is a vector $$\ket \psi = \alpha \ket 0 + \beta \ket 1 = \alpha \rmat{1 \\ 0 } + \beta \rmat{0 \\ 1} = \rmat{\alpha \\ \beta}$$ where $\alpha, \beta \in \C$ such that $\abs \alpha ^2 + \abs \beta ^2 = 1$ are called \tbf{probability amplitudes}. But why are we talking about probabilities in the first place? The \curlyquotes{true} state of a qubit \tbf{cannot be observed}, and we say that the qubit is in a \tit{superpotion} of $\ket 0$ and $\ket 1$ in the sense that $\alpha$ and $\beta$ describe the probabilities of getting either states once the qubit is measured. This is because to know the value of a qubit we have to \tit{measure it}, and the measurement operation itself will make the qubit \tit{collapse} into either $\ket 0$ or $\ket 1$ with probabilities $\abs \alpha ^2$ and $\abs \beta ^2$ respectively, i.e. $$\Pr[\mbox{measured qubit is $\ket 0$}] = \abs \alpha ^2 \quad \quad \Pr[\mbox{measured qubit is $\ket 1$}] = \abs \beta ^2$$ To use a more compact notation, we will denote this property as follows: $$\alpha \ket 0 + \beta \ket 1 \soe{ll}{\ket 0 & @ \  \abs{\alpha}^2 \\ \ket 1 & @ \ \abs{\beta}^2}$$ where the $@$ notation (read as \curlyquotes{at}) denotes the probabilty of the corresponding outcome. Note that if we measure a collapsed qubit we will keep observing the same state indefinitely.
 
-In reality, to be precise qubits actually collapse into any multiple $z \in \C$ of either $\ket 0$ or $\ket 1$ such that $\abs z = 1$, but this is not relevant from a physical point of view. In fact, for any $\theta$ physicist treat $\ket \psi = \ket 0$ and $\ket {\psi'} = e^{i \theta} \ket 0 $ as the \tit{same physical state}, because probabilities depend on squared magnitudes and thus $$\abs{e^{i \theta} \alpha}^2 = \abs \alpha^2$$ (and the same applies for $\beta$ too) even though $\ket \psi$ and $\ket {\psi'}$ are different vectors mathematically.
+In reality, to be precise qubits actually collapse into any multiple $z \ket 0$ or $z\ket 1$, where $z \in \C$ is a complex number such that $\abs z = 1$, but this is not relevant from a physical point of view. In fact, for any $\theta$ physicists treat $\ket \psi = \ket 0$ and $\ket {\psi'} = e^{i \theta} \ket 0 $ as the \tit{same physical state}, because probabilities depend on squared magnitudes and thus $$\abs{e^{i \theta} \alpha}^2 = \abs \alpha^2$$ (and the same applies for $\beta$ too) even though $\ket \psi$ and $\ket {\psi'}$ are different vectors mathematically.
 
-% To be precise, after the measurement the qubit will be either a \tit{multiple} of $\ket 0$ or $\ket 1$: given two complex numbers $z, w \in \C$, since $\abs{z \cdot w} = \abs z \abs w$, we get that if $\abs z = 1$ then $\abs{z \cdot w} = 1 \cdot \abs w = \abs w$; this implies that for any $\alpha, \beta \in \C$ and any $z \in \C$ we have that
+What can we do with qubits other then \tit{measure them}? The operations that can be applied on qubits are restricted to \tbf{unitary transformations}.
+
+\begin{frameddefn}{Unitary transformation}
+	A transformation $U$ is said to be \tbf{unitary} if it preserves the norm of its input vector, i.e. $$\forall v \quad \norm{Uv} = \norm v$$
+\end{frameddefn}
+
+For instance, the identity matrix $I$ is an example of trivial unitary transformation, but also the NOT matrix, which is the following $$\mbox{NOT} := \rmat{0 & 1 \\ 1 & 0}$$ which has the effect of \tit{swapping} the input basis state $$\mbox{NOT} \ket 0 = \ket 1 \quad \quad \mbox{NOT} \ket 1 = \ket 0$$ This matrix behaves as the classical NOT gate with the usual bits in classical computing, in fact will refer to \tit{transformations} and \tit{gates} interchangeably.
+
+Another very important transformation is represented by the \tbf{Hadamard gate}, which is the following matrix $$H := \dfrac{1}{\sqrt 2}\rmat{1 & 1 \\ 1 & -1}$$ This matrix has the effect of \curlyquotes{mapping} classical states into superpositions: $$H \ket 0 = \dfrac{1}{\sqrt 2}\rmat{1 & 1 \\ 1 & -1} \rmat{1 \\ 0} = \dfrac{1}{\sqrt 2} \rmat{1 \\ 0} = \dfrac{1}{\sqrt 2} (\ket 0 + \ket 1) \soe{ll}{\ket 0 & @ \  \frac{1}{2} \\ \ket 1 & @ \  \frac{1}{2}}$$ For instance, in this example given $\ket 0$ which represents the classical bit 0, we get a qubit as output of the linear transformation.
+
+As a side note, as we mentioned at the beginning of the chapter quantum mechanics has randomness intrinsically, and since the operation $H \ket 0$ returns a qubit that has 50\% of probability of being either $\ket 0$ or $\ket 1$ once measured, this operation provides a \underline{true} random number generator. \todo{side note on Hadamard gate really implemented?}
+
+TODO \todo{bloch sphere too bored to do it}
+
+So far we have dealt with only one qubit at a time, but what if we have two qubits? First, let's look at the classical counterpart. If we take two bits $a, b \in \{0, 1\}$, we can represent 4 possible binary numbers, namely 00, 01, 10 and 11, which we can algebraically obtain by computing the usual cartesian product $$\{0, 1\}^2 = \{0, 1\} \times \{0, 1\} = \{(0, 0), (0, 1), (1, 0), (1, 1)\}$$ Note that in the cartesian products it holds that:
+
+\begin{itemize}
+	\item the length of the tuples of the product is linear w.r.t. the number of factors of the cartesian products --- in this case, 2
+	\item each element of a tuple is \tit{independent} from the other elements of the tuple
+\end{itemize}
+
+How can we evaluate all the possible states that two qubits can represent, instead? To answer this question, we need to introduce a new operator, which is called \tbf{tensor product}. Given two vectors $\rmat{a \\ b}$ and $\rmat{c \\ d}$, their tensor product is defined as follows $$\rmat{a \\ b} \otimes \rmat{c \\ d} := \rmat{ac \\ ad \\ bc \\ bd}$$ Hence, consider two qubits $$\ket \psi = \alpha_0 \ket 0 + \alpha_1 \ket 1 = \rmat{\alpha_0 \\ \alpha_1} \quad \quad \ket \phi = \beta \ket 0 + \beta_1 \ket 1 = \rmat{\beta_0 \\ \beta_1}$$ To obtain all the possible states of $\ket \psi$ and $\ket \phi$ we just have to compute the tensor product between them, which is
+\begin{equation*}
+	\begin{split}
+		\ket \psi \otimes \ket \phi & = \rmat{\alpha_0           \\ \alpha_1} \otimes \rmat{\beta_0 \\ \beta_1} \\
+		                            & = \alpha_0 \beta_0 \rmat{1 \\ 0 \\ 0 \\ 0 } + \alpha_0 \beta_1 \rmat{0 \\ 1 \\ 0 \\ 0} + \alpha_1 \beta_0 \rmat{0 \\ 0 \\ 1 \\ 0} + \alpha_1 \beta_1 \rmat{0 \\ 0 \\ 0 \\ 1}
+	\end{split}
+\end{equation*}
+At the beginning of the chapter we defined $\ket 0$ and $\ket 1$ to be $\rmat{0 \\ 1}$ and $\rmat{1 \\ 0}$ without providing an explaination; now that we are dealing with more than 2 dimensions we can show why such names are used. In fact, we will use the following naming convention $$\ket{00} := \rmat{1 \\ 0 \\ 0 \\ 0 } \quad \ket {01} := \rmat{0 \\ 1 \\ 0 \\ 0} \quad \ket{10} := \rmat{0 \\ 0 \\ 1 \\ 0} \quad \ket{11} := \rmat{0 \\ 0 \\ 0 \\ 1}$$ and in general it holds that $$\ket{\mbox{bin}(i)} = e_i$$ where $\mbox{bin}(i)$ represents for the binary representation of $i$, and $e_i$ is the $i$-th vector of the canonical basis. This implies that we can rewrite the previous tensor product as follows: $$\ket \psi \otimes \ket \phi = \alpha_0 \beta_0 \ket{00} + \alpha_0 \beta_1 \ket{01} + \alpha_1 \beta_0 \ket{10} + \alpha_1 \beta_1 \ket {11} = \sum_{i, j \in \{0, 1\}}{\alpha_i \beta_j \ket{ij}}$$ As a final note, it can be easily proven that $$\forall i, j \in \{0, 1\} \quad \ket i \otimes \ket j = \ket{ij}$$
+
+For example, given two qubits $$\ket \phi = \dfrac{1}{\sqrt 2} (\ket 0 + \ket 1) \quad \ket \psi = \dfrac{1}{\sqrt 2} (\ket 0 + \ket 1)$$ we get that
+\begin{equation*}
+	\begin{split}
+		\ket \psi \otimes \ket \phi & = \rmat{\tfrac{1}{\sqrt 2}                                                   \\ \tfrac{1}{\sqrt 2}} \otimes \rmat{\tfrac{1}{\sqrt 2} \\ \tfrac{1}{\sqrt 2}} \\
+		                            & = \rmat{\tfrac{1}{2}                                                         \\ \tfrac{1}{2} \\ \tfrac{1}{2} \\ \tfrac{1}{2}} \\
+		                            & = \dfrac{1}{2}(\ket{00} + \ket{01} + \ket{10} + \ket{11})                    \\
+		                            & \soe{ll}{\ket 0 \mbox{and} \ket 0                         & @ \ \tfrac{1}{4} \\ \ket 0 \mbox{and} \ket 1 & @ \ \tfrac{1}{4} \\ \ket 1 \mbox{and} \ket 0 & @ \ \tfrac{1}{4} \\ \ket 1 \mbox{and} \ket 1 & @ \ \tfrac{1}{4}}
+	\end{split}
+\end{equation*}
+where the probabilities at the end refer to the two individual qubits. To recap, in general the tensor product $\ket \psi \otimes \ket \phi$ of two qubits encodes the superposition of 4 basis states, namely $\ket {00}$, $\ket{01}$, $\ket{10}$ and $\ket 11$.
+
+TODO \todo{da finire}
 
 % \printbibliography % UNCOMMENT FOR BIBLIOGRAPHY
 
