--- a/src/references.bib
+++ b/src/references.bib
@@ -12,3 +12,17 @@
   month         = oct,
   pages         = {802–803}
 }
+@article{epr,
+  title         = {Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
+  volume        = {47},
+  issn          = {0031-899X},
+  url           = {http://dx.doi.org/10.1103/PhysRev.47.777},
+  doi           = {10.1103/physrev.47.777},
+  number        = {10},
+  journal       = {Physical Review},
+  publisher     = {American Physical Society (APS)},
+  author        = {Einstein,  A. and Podolsky,  B. and Rosen,  N.},
+  year          = {1935},
+  month         = may,
+  pages         = {777–780}
+}
