--- a/src/references.bib
+++ b/src/references.bib
@@ -26,3 +26,13 @@
   month         = may,
   pages         = {777–780}
 }
+@article{ghz,
+  doi           = {10.48550/ARXIV.0712.0921},
+  url           = {https://arxiv.org/abs/0712.0921},
+  author        = {Greenberger,  Daniel M. and Horne,  Michael A. and Zeilinger,  Anton},
+  keywords      = {Quantum Physics (quant-ph),  FOS: Physical sciences,  FOS: Physical sciences},
+  title         = {Going Beyond Bell's Theorem},
+  publisher     = {arXiv},
+  year          = {2007},
+  copyright     = {Assumed arXiv.org perpetual,  non-exclusive license to distribute this article for submissions made before January 2004}
+}
